Started on styling and testing the api calls.

--- a/javascript/src/index.html
+++ b/javascript/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Callery Pears</title>
+    <title>The Callery Pear</title>
 </head>
 <body>
     <div id="root"></div> 
